syntax = "proto3";
package changer;

option java_multiple_files = true;
option java_package = "com.github.whileloop.rememeberme.proto";
option java_outer_classname = "ChangerProto";

// The greeting service definition.
service Changer {
    // Sends a greeting
    rpc ChangePassword (ChangeRequest) returns (ChangeReply) {
    }
    rpc GetManagers (ManagersRequest) returns (ManagersReply) {
    }
}

message ManagersRequest {

}

message ManagersReply {
    repeated string managers = 1;
}

message PasswdConfig {
    uint32 length = 1;
    bool numbers = 2;
    bool specialChars = 3;
}

// The request message containing the user's name.
message ChangeRequest {
    enum Manager {
        LASTPASS = 0;
    }

    Manager manager = 1;
    string email = 2;
    string password = 3;
    PasswdConfig passwdConfig = 4;
}

// The request message containing the user's name.
message ChangeReply {
    uint64 jobId = 1;
    uint64 startTime = 2;
}
